read branch with / characters
